[gd_scene load_steps=16 format=3 uid="uid://d36l7keq0j2v"]

[ext_resource type="Script" path="res://GUI/DialogueSystem/Scripts/dialogueSystem.gd" id="1_kw4ey"]
[ext_resource type="Texture2D" uid="uid://dma5h7fdlohxx" path="res://GUI/DialogueSystem/text-bubble.png" id="2_173aa"]
[ext_resource type="FontFile" uid="uid://boutykjiyabgq" path="res://GUI/Fonts/Abaddon Light.ttf" id="3_fiuji"]
[ext_resource type="FontFile" uid="uid://8c0v8ui2crtu" path="res://GUI/Fonts/Abaddon Bold.ttf" id="4_ubga4"]
[ext_resource type="Texture2D" uid="uid://crtxgq14u76k" path="res://Resources/Michael Games Sprites/npc_and_dialog/sprites/portraits/npc_portrait_01.png" id="5_4qpk4"]
[ext_resource type="FontFile" uid="uid://hfgmnua5imtm" path="res://GUI/Fonts/m6x11.ttf" id="5_nldyi"]
[ext_resource type="Script" path="res://Props/Interactables/Dialogue Interaction/Scripts/dialoguePortrait.gd" id="6_2gesg"]
[ext_resource type="AudioStream" uid="uid://b0yl8fsxoxwmx" path="res://Resources/Michael Games Sprites/npc_and_dialog/audio/voice_blip.wav" id="6_3axov"]

[sub_resource type="Gradient" id="Gradient_vnwbh"]
offsets = PackedFloat32Array(0, 0.99435)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_o5ckd"]
gradient = SubResource("Gradient_vnwbh")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3wnq5"]
content_margin_left = 14.0
content_margin_top = 10.0
content_margin_right = 14.0
content_margin_bottom = 10.0
texture = ExtResource("2_173aa")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_84eqh"]
content_margin_left = 5.0
content_margin_top = 0.0
content_margin_right = 3.0
content_margin_bottom = 1.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Animation" id="Animation_0iw6f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wcvq4"]
resource_name = "default"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.2, 1.4, 1.5, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3b6hk"]
_data = {
"RESET": SubResource("Animation_0iw6f"),
"default": SubResource("Animation_wcvq4")
}

[node name="DialogueSystem" type="CanvasLayer"]
process_mode = 3
layer = 0
script = ExtResource("1_kw4ey")

[node name="DialogueUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="DialogueUI"]
modulate = Color(0.132, 0.118, 0.079, 0.568)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -536.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("GradientTexture2D_o5ckd")

[node name="PanelContainer" type="PanelContainer" parent="DialogueUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -304.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_3wnq5")

[node name="RichTextLabel" type="RichTextLabel" parent="DialogueUI/PanelContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.439216, 0.396078, 0.321569, 1)
theme_override_fonts/normal_font = ExtResource("3_fiuji")
theme_override_fonts/bold_font = ExtResource("4_ubga4")
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
text = "Example [b]Text[/b]
[wave]WOOOOOAH[/wave]
[shake]AAAAH!![/shake]"
scroll_active = false

[node name="NameLabel" type="Label" parent="DialogueUI"]
layout_mode = 0
offset_left = 328.0
offset_top = 376.0
offset_right = 824.0
offset_bottom = 429.0
theme_override_colors/font_color = Color(0.901961, 0.870588, 0.811765, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_ubga4")
theme_override_font_sizes/font_size = 40
text = "NAME"

[node name="PortraitSprite" type="Sprite2D" parent="DialogueUI"]
texture_filter = 1
position = Vector2(168, 472)
scale = Vector2(3.32, 3.32)
texture = ExtResource("5_4qpk4")
hframes = 4
script = ExtResource("6_2gesg")

[node name="Timer" type="Timer" parent="DialogueUI"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DialogueUI"]
stream = ExtResource("6_3axov")
max_polyphony = 6
bus = &"SFX"

[node name="DialogueProgressIndicator" type="PanelContainer" parent="DialogueUI"]
self_modulate = Color(0.346976, 0.355272, 0.530482, 1)
layout_mode = 0
offset_left = 1168.0
offset_top = 640.0
offset_right = 1256.0
offset_bottom = 696.0
theme_override_styles/panel = SubResource("StyleBoxFlat_84eqh")

[node name="Label" type="Label" parent="DialogueUI/DialogueProgressIndicator"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nldyi")
theme_override_font_sizes/font_size = 35
text = "NEXT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogueUI/DialogueProgressIndicator"]
libraries = {
"": SubResource("AnimationLibrary_3b6hk")
}
